# dram-price

./: .gitignore  README.md  copy-audit.config.json  pyproject.toml
.github/workflows/: deploy-pages.yml  update-data.yml
data/: automation-health.json  automation-status.json  prices.json  series.json  status.json  summary.json
docs/: chart-map.md  shared-frontend-integration.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  platform-snapshot.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/scripts/: verify-build.mjs  verify-platform-snapshot.mjs
frontend/src/: App.test.tsx  App.tsx  index.css  types.ts
frontend/src/components/: data-details.tsx  filter-controls.tsx  latest-cards.tsx  observation-list.tsx  price-chart.test.tsx  price-chart.tsx  shared-nav.tsx  status-strip.tsx
frontend/src/lib/: data.test.ts  data.ts  market.test.ts  market.ts  theme.ts
frontend/src/shared-platform/: contracts.ts  control-manifest.ts  index.ts  project-registry.ts  shared-platform.test.ts  static-result-adapter.ts
scripts/: update_automation_health.py  validate_publication.py
src/dram_tracker/: __init__.py  __main__.py  automation_status.py  collect.py  freshness.py  html_tables.py  http.py  model.py
tests/: test_automation_health.py  test_model_and_collect.py  test_parsers.py  test_summary_contract_schema.py  test_workflows.py
tests/fixtures/: memorymarket_category_ddr.html  memorymarket_product_100221.html  memorymarket_product_100222.html  trendforce_spot.html
web/: app.js  index.html  styles.css
(+7 files in other folders)
